# cli

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
specs/: cli-and-pat.md  logs.md  write-methods-apps-resources.md
src/novps/: client.py  config.py  main.py  manifest.py  output.py
src/novps/commands/: apps.py  auth.py  databases.py  github.py  port_forward.py  registry.py  resources.py  secrets.py  storage.py
