[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novps"
version = "0.1.0"
description = "CLI tool for novps.io infrastructure management"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "rich>=13",
    "websockets>=13",
]

[project.scripts]
novps = "novps.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/novps"]
