[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "novps"
dynamic = ["version"]
description = "CLI tool for novps.io infrastructure management"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "rich>=13",
    "websockets>=13",
    "certifi",
    "PyYAML>=6.0",
]

[project.scripts]
novps = "novps.main:app"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/novps/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/novps"]
